--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "Apache Version 2.0",
   "dependencies": {
     "process": "~0.11.2",
-    "socket.io-client": "~1.0",
+    "socket.io-client": "^1.3",
     "yargs": "~3.31",
     "sprintf": "~0.1"
   }
